--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,15 @@
             android:text="@string/btn_calc_text" />
 
         <Button
+            android:id="@+id/game2048Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="25dp"
+            android:scaleX="1.5"
+            android:scaleY="1.5"
+            android:text="@string/btn_2048_text" />
+
+        <Button
             android:id="@+id/exitButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
